# image_operation_rust_poc

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  native_image_api.dart
lib/app/: image_operation_rust_app.dart
lib/features/image_process/: image_process_constants.dart
lib/features/image_process/services/: image_size_resolver.dart
lib/features/image_process/view_models/: image_process_view_model.dart
lib/features/image_process/views/: image_process_page.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb  locale_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: image_ops.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: native_image_processor.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: native_image_processor.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
