[package]
name = "native_image_processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
fast_image_resize = { version = "6", features = ["image"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
